--- a/src/main/webapp/resources/css/mypage/style_mypage.css
+++ b/src/main/webapp/resources/css/mypage/style_mypage.css
@@ -1,1 +1,98 @@
 @charset "UTF-8";
+
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap");
+#mypage body {
+	background: #f9f9f9;
+	font-family: "Roboto", sans-serif;
+}
+
+
+#mypage .shadow {
+	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1) !important;
+}
+
+#mypage .profile-tab-nav {
+	min-width: 250px;
+}
+
+#mypage .profile-tab-nav .nav-link{
+	height: 60px;
+	font-size: 20px;
+}
+
+#mypage #imgchange{
+	position: absolute; 
+	right: 10%; 
+	top:65%; 
+	border: 2px solid white; 
+	background-color:gray; 
+	color: white;
+	border-radius: 50%;
+	padding: 5%;
+}
+
+#mypage .tab-content {
+	flex: 1;
+	
+}
+
+#mypage .form-group {
+	margin-bottom: 1.5rem;
+}
+
+#mypage .nav-pills a.nav-link {
+	padding: 15px 20px;
+	border-bottom: 1px solid #ddd;
+	border-radius: 0;
+	color: #333;
+}
+#mypage .nav-pills a.nav-link i {
+	width: 20px;
+}
+
+
+
+#mypage .img-circle img {
+	height: 100px;
+	width: 100px;
+	border-radius: 100%;
+	border: 5px solid #fff;
+}
+#mypage #tb {
+	text-align: center;
+}
+#mypage #tb:hover {
+	background-color: rgb(224, 224, 224);
+}
+#mypage #tb a{
+	color:black;
+}
+
+#mypage #tbt{
+	border-bottom: 2px solid rgb(189, 184, 184);
+	text-align: center;
+}
+
+#mypage table #line{
+	text-align: left;
+}
+
+#mypage #qna{
+	border-radius: 50%;
+	width: 80px;
+	height: 80px;
+}
+
+#mypage #int_btn{
+	cursor: pointer;
+}
+#mypage #pro_btn{
+	cursor: pointer;
+}
+#mypage #myimg{
+	visibility: hidden;
+}
+#mypage .fa{
+	cursor: pointer;
+}
+
