--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -10,14 +10,16 @@ body {
   height: 100vh;
 
   -ms-overflow-style: none; 
-} ::-webkit-scrollbar { display: none; }
+} 
+
+::-webkit-scrollbar { display: none; }
 
 header {
   position: sticky;
   z-index: 2;
   top: 0;
   width: 100%;
-  /* height: 4.9em; */
+  /* height: 5em; */
   background-color: #f1f3f5;
   box-shadow: 0em 0em 1em 0.05em rgb(189, 189, 189);
 }
@@ -39,7 +41,7 @@ header .menu {
 header .menubtn {
   font-weight: 600;
   color: black;
-  padding: 24.5% 0;
+  padding: 24.2% 0;
   width: 6.5em;
   font-size: 1.1rem;
   text-decoration: none;
@@ -50,17 +52,4 @@ header .menubtn {
 
 header .menubtn:hover {
   background-color: white;
-}
-
-header .menubtn_clicked {
-  font-weight: 600;
-  background-color: white;
-  color: black;
-  padding: 24.5% 0;
-  width: 6.5em;
-  font-size: 1.1rem;
-  text-decoration: none;
-  justify-content: center;
-  cursor: pointer;
-  display: flex;
 }
