--- a/src/main/webapp/resources/css/user/login.css
+++ b/src/main/webapp/resources/css/user/login.css
@@ -113,3 +113,21 @@
   font-size: 1.1em;
   color: #f1f3f5;
 }
+
+.loginmain {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.loginmain label {
+  font-size: 4em;
+  font-weight: 700;
+}
+
+.loginmain .btn {
+  display: flex;
+  padding: 0;
+  margin-top: 10%;
+}
