모든 페이지 header 적용

--- a/src/main/webapp/resources/css/footer.css
+++ b/src/main/webapp/resources/css/footer.css
@@ -2,7 +2,7 @@ footer {
   position: absolute;
   left: 0;
   /* bottom: 0; */
-  top: 100vh;
+  top: 100%;
   width: 100vw;
   height: 10em;
   background-color: #727272;
