--- a/src/main/webapp/resources/css/mainheader.css
+++ b/src/main/webapp/resources/css/mainheader.css
@@ -1,49 +1,128 @@
 * {
-        font-family: ‘Noto Sans KR’, sans-serif;
-      }
+	font-family: ‘Noto Sans KR’, sans-serif;
+}
 
-      html,
-      body {
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        /* height: 100%; */
-      }
+html,
+body {
+	margin: 0;
+	padding: 0;
+	width: 100vw;
+	height: 100vh;
 
-      header {
-        position: sticky;
-        z-index: 2;
-        top: 0;
-        width: 100%;
-        height: 5em;
-      }
+	-ms-overflow-style: none; 
+} 
 
-      header .img {
-        width: 8em;
-        margin-top: 0.2em;
-        margin-left: 2.5em;
-        /* align-items: center; */
-      }
+::-webkit-scrollbar { display: none; }
 
-      header .menu {
-        float: right;
-        display: flex;
-        height: 100%;
-        margin-right: 2.5em;
-      }
 
-      header .menubtn {
-        font-weight: 600;
-        color: black;
-        padding: 25% 0;
-        width: 6.5em;
-        font-size: 1.1rem;
-        /* text-decoration: none; */
-        justify-content: center;
-        cursor: pointer;
-        display: flex;
-      }
+header {
+	position: sticky;
+	z-index: 2;
+	top: 0;
+	width: 100%;
+	/* height: 5em; */
+}
 
-      header .menubtn:hover {
-        font-weight: 900;
-      }
+header .img {
+	width: 8em;
+	margin-top: 0.2em;
+	margin-left: 2.5em;
+	/* align-items: center; */
+}
+
+header .menu {
+	float: right;
+	display: flex;
+	height: 100%;
+	margin-right: 2.5em;
+}
+
+header .menubtn {
+	font-weight: 600;
+	color: black;
+	padding: 24.2% 0;
+	width: 6.5em;
+	font-size: 1.1rem;
+	text-decoration: none;
+	justify-content: center;
+	cursor: pointer;
+	display: flex;
+}
+
+header .menubtn:hover {
+	font-weight: 800;
+	text-decoration: none;
+	color: black;
+}
+      
+.main {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	height: 100%;
+}
+
+.main label {
+	font-size: 4em;
+	font-weight: 700;
+}
+
+.main .btn {
+	display: flex;
+	padding: 0;
+	margin-top: 10%;
+}
+
+.main .maincon {
+	top: 0em;
+	left: 0em;
+	padding: 15em 7em 15em 14em;
+	width: 50em;
+	height: 100%;
+	background-color: #ffffff;
+	background-color: rgba( 255, 255, 255, 0.5 );
+}
+
+.main .mainbtn1 {
+	border: 0.08em solid black;
+	background-color: black;
+	color: white;
+	padding: 1rem 1.3rem;
+	font-size: 1.3em;
+	cursor: pointer;
+	text-decoration: none;
+}
+
+.main .mainbtn2 {
+	border: 0.08em solid black;
+	color: black;
+	padding: 1rem;
+	font-size: 1.3em;
+	cursor: pointer;
+	text-decoration: none;
+}
+
+.main .mainbtn1:hover,
+.mainbtn2:hover {
+	border: 0.08em solid white;
+	background-color: white;
+	color: black;
+}
+      
+.loginmain {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	height: 100%;
+}
+
+.loginmain label {
+	font-size: 4em;
+	font-weight: 700;
+}
+
+.loginmain .btn {
+	display: flex;
+	padding: 0;
+	margin-top: 10%;
+}
