--- a/src/main/webapp/resources/css/question/question_result.css
+++ b/src/main/webapp/resources/css/question/question_result.css
@@ -1,13 +1,67 @@
-#resultContainer {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+@charset "UTF-8";
+#questionResult #inquire{
+    background-color: rgb(239, 239, 239);
 }
 
-#resultContainer .estimate {
-    width: 90%;
-    height: auto;
+#questionResult #table_top{
+    border-bottom:solid;
+    border-collapse: separate;
+	border-spacing: 10px 40px;
+    border-color: gray;
 }
+#questionResult #table_bottom{
+    border-top:solid;
+    border-collapse: separate;
+	border-spacing: 0px 40px;
+    border-color: gray;
+}
+
+#questionResult #table_top td{
+    width: 8%;
+}
+/* 배경 색상: #a79f8b */
+#questionResult #tableContainer table {
+	background-color: #bdb7a8;
+	opacity: 0.9;
+}
+
+/* #interialq{
+    margin-top: 6%;
+    margin-left: 10%;
+} */
+
+/* #interialq .box{
+    opacity: 0;
+}
+#interialq .box.visible{
+    opacity: 1;
+}
+#interialq .box2{
+    opacity: 0;
+}
+#interialq .box2.visible{
+    opacity: 1;
+} */
+#questionResult #animation:hover{
+    font-weight: 900;
+    
+}
+#questionResult #animation2:hover{
+    font-weight: 900;
+}
+#questionResult #down{
+    animation:  vertical 2.0s ease-in-out infinite;
+}
+@keyframes vertical {
+    0%{
+        opacity: 0;
+        transform: translate(0.5em, -2em);
+      }
+      50%{
+        opacity: 1;
+      }
+      100%{
+        opacity: 0;
+        transform: translate(0.5em, 0.5em);
+      }
+  }
