--- a/src/main/webapp/resources/css/question/question_result.css
+++ b/src/main/webapp/resources/css/question/question_result.css
@@ -12,56 +12,15 @@
 #questionResult #table_bottom{
     border-top:solid;
     border-collapse: separate;
-	border-spacing: 0px 40px;
+
     border-color: gray;
 }
 
 #questionResult #table_top td{
-    width: 8%;
+    width: 5%;
 }
-/* 배경 색상: #a79f8b */
-#questionResult #tableContainer table {
-	background-color: #bdb7a8;
-	opacity: 0.9;
+#questionResult img{
+	width: 100%;
+	height: 100%;
 }
 
-/* #interialq{
-    margin-top: 6%;
-    margin-left: 10%;
-} */
-
-/* #interialq .box{
-    opacity: 0;
-}
-#interialq .box.visible{
-    opacity: 1;
-}
-#interialq .box2{
-    opacity: 0;
-}
-#interialq .box2.visible{
-    opacity: 1;
-} */
-#questionResult #animation:hover{
-    font-weight: 900;
-    
-}
-#questionResult #animation2:hover{
-    font-weight: 900;
-}
-#questionResult #down{
-    animation:  vertical 2.0s ease-in-out infinite;
-}
-@keyframes vertical {
-    0%{
-        opacity: 0;
-        transform: translate(0.5em, -2em);
-      }
-      50%{
-        opacity: 1;
-      }
-      100%{
-        opacity: 0;
-        transform: translate(0.5em, 0.5em);
-      }
-  }
