--- a/src/main/webapp/resources/css/mypage/style_FAQ.css
+++ b/src/main/webapp/resources/css/mypage/style_FAQ.css
@@ -22,7 +22,7 @@
 }
 #mypage #faq #accordion .accordion-card__header {
 	background: #fcc573;
-	color: whitesmoke;
+	color: black;
 	padding: 15px;
 	border-radius: 5px;
 	cursor: pointer;
