--- a/src/main/webapp/resources/css/mypage/style_FAQ.css
+++ b/src/main/webapp/resources/css/mypage/style_FAQ.css
@@ -21,7 +21,7 @@
 	margin-bottom: 30px;
 }
 #mypage #faq #accordion .accordion-card__header {
-	background: #fcc573;
+	background: #E1E1E1;
 	color: black;
 	padding: 15px;
 	border-radius: 5px;
