--- a/src/main/webapp/resources/css/question/question_index.css
+++ b/src/main/webapp/resources/css/question/question_index.css
@@ -8,17 +8,20 @@ html {
 
 #progressbarContainer {
     position:fixed;
-    width: 10%;
-    height: auto;
-    z-index: 999;
-    margin-top: 3.5em;
-    margin-left: 90%;
-    top: 12rem;
+    width: 20%;
+    height: 100vh;
+    z-index: 10;
+    margin-top: 0;
+    top: 0rem;
+    padding: 0 0 50vh 0;
+    text-align: center;
+    background-color: #f1f3f5;
+    /* box-shadow: 0.1em 0em 1em 0em rgb(189, 189, 189); */
 }
 
 #progressbarContainer #progressbar {
     padding: 0rem;
-    width: 20rem;
+    width: 100%;
     height: 5em;
     /* overflow: hidden; */
     counter-reset: step;
@@ -27,14 +30,14 @@ html {
 
 #progressbarContainer #progressbar li {
     list-style-type: none;
-    width: 10rem;
+    width: 100%;
     height: 100%;
     color: rgb(95, 95, 95);
     text-transform: uppercase;
     font-size: 1.2rem;
     padding: 0.5em;
     margin: -0.1em;
-    border-right: 0.1em solid rgb(160, 160, 160);
+    /* border-right: 0.1em solid rgb(160, 160, 160); */
 }
 
 #progressbarContainer #progressbar li::before {
@@ -345,7 +348,7 @@ html {
 }
 
 #questionContainer input[type="radio"]:checked + .card {
-    outline: #a880ff solid 0.5rem;
+    outline: #ffb440 solid 0.5rem;
     transition: all .2s ease-in-out;
 }
  
