--- a/src/main/webapp/resources/css/button.css
+++ b/src/main/webapp/resources/css/button.css
@@ -55,11 +55,11 @@
 .user_button {
     background-color: #808080;
     border: none;
-    color: black;
+    color: white;
     width: 100%;
     height: 3em;
     margin: 1em 0;
     font-size: 1.2em;
-    border-radius: 1em;
+    border-radius: 0.5em;
     cursor: pointer;
 }
