--- a/src/main/webapp/resources/css/question/question_index.css
+++ b/src/main/webapp/resources/css/question/question_index.css
@@ -399,66 +399,75 @@ html {
 }
 
 #submitIp {
-    color: #f1f3f5;
-    border: .2rem solid black;
-    background-color: #000;
-    width: 10rem;
-    height: 4rem;
-}
-
-#submitIp:hover {
-    color: #000;
-    border: .1rem solid black;
+    margin-top: 0;
     background-color: #f1f3f5;
-    width: 10rem;
-    height: 4rem;
-    transition: 0.5s;
-    transform: translateZ(-2rem);
 }
 
-/* .spin-btn span {
+#questionContainer .btn-end {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 10rem;
+    height: 4rem;
+    font-size: 1.5rem;
+    color: black;
+    text-decoration: none;
+    margin-top: 0;
+}
+
+#questionContainer .wrap-end {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 10rem;
+    height: 4rem;
+    border: 0.1rem solid #333;
+    margin: 0 0;
+    font-size: 1.5rem;
+    cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
     position: relative;
-    display: inline-flex;
+    z-index: 0;
+    transition: 1s;
+}
+
+#questionContainer .wrap-end::before {
+    position: absolute;
+    background: #f1f3f5;
+    z-index: -1;
+    transition: 1s;
+    content: '';
+}
+
+#questionContainer .wrap-end::after {
+    position: absolute;
+    background: #f1f3f5;
+    z-index: -1;
+    transition: 1s;
+    content: '';
     width: 10rem;
+    height: 3rem;
+}
+
+#questionContainer .wrap-end::before {
     height: 4rem;
-    margin: 0 1rem;
-    perspective: 90rem;
+    width: 9rem;
 }
 
-.spin-btn span #submitIp {
-    font-size: 1.25rem;
-    letter-spacing: .1rem;
-    transform-style: preserve-3d;
-    transform: translateZ(-1.85rem);
-    transition: transform .25s;    
+#questionContainer .wrap-end:hover::before {
+    width: 0px;
+    background-color: #f1f3f5;
 }
 
-.spin-btn span #submitIp:before,
-.spin-btn span #submitIp:after{
-  position: absolute;
-  content: "확인하기";
-  width: 10rem;
-  height: 4rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: .2rem solid black;
-  box-sizing: border-box;
-  border-radius: .3rem;
+#questionContainer .wrap-end:hover::after {
+    height: 0px;
+    background-color: #f1f3f5;
 }
 
-.spin-btn span #submitIp:before{
-  color: #fff;
-  background: #000;
-  transform: rotateY(0deg) translateZ(1.85rem);
+#questionContainer .wrap-end:hover {
+    background-color: #f1f3f5;
 }
 
-.spin-btn span #submitIp:after{
-  color: #000;
-  background-color: white;
-  transform: rotateX(90deg) translateZ(1.85rem);
+#questionContainer .wrap-end span {
+    margin-top: 0;
 }
-
-.spin-btn span #submitIp:hover{
-  transform: translateZ(-1.85rem) rotateX(-90deg);
-} */
