--- a/src/main/webapp/resources/css/question/question_index.css
+++ b/src/main/webapp/resources/css/question/question_index.css
@@ -13,8 +13,8 @@ html {
     z-index: 10;
     margin-top: 0;
     top: 0rem;
-    padding: 0 0 50vh 0;
-    text-align: center;
+    padding: 5em 0 50vh 0;
+    /* text-align: center; */
     background-color: #f1f3f5;
     /* box-shadow: 0.1em 0em 1em 0em rgb(189, 189, 189); */
 }
@@ -32,11 +32,10 @@ html {
     list-style-type: none;
     width: 100%;
     height: 100%;
-    color: rgb(95, 95, 95);
+    color: #595959;
     text-transform: uppercase;
     font-size: 1.2rem;
     padding: 0.5em;
-    margin: -0.1em;
     /* border-right: 0.1em solid rgb(160, 160, 160); */
 }
 
@@ -47,7 +46,7 @@ html {
     line-height: 1.5rem;
     /* display: block; */
     font-size: 1.2rem;
-    color: rgb(95, 95, 95);
+    color: #595959;
     /* background: #cde0f3; */
     /* border-radius: 3px; */
     margin: 0 0.3rem 0.3rem auto;
@@ -60,6 +59,7 @@ html {
     /* background: #cde0f3; */
     /* left: -50%; */
     /* top: 9px; */
+    border-right-color: #595959;
     z-index: -1;
 }
 
@@ -68,15 +68,14 @@ html {
 }
 
 #progressbarContainer #progressbar li.active {
-    background-color: rgb(154, 154, 154);
-    color: white;
+	border-right: 0.2em solid #595959;
     font-size: 1.2rem;
 }
 
-#progressbarContainer #progressbar li.active::before, ::after {
-    /* background: #ff9a76; */
+/* #progressbarContainer #progressbar li.active::before, ::after {
+    background: #ff9a76;
     color: white;
-}
+} */
 
 #questionContainer {
     position: relative;
