--- a/src/main/webapp/resources/css/question/question_index.css
+++ b/src/main/webapp/resources/css/question/question_index.css
@@ -109,7 +109,7 @@ html {
     width: 10rem;
     height: 4rem;
     border: 0.1rem solid #333;
-    margin: 0 0;
+    margin: 0;
     font-size: 1.5rem;
     cursor: pointer;
     -webkit-tap-highlight-color: transparent;
@@ -215,6 +215,7 @@ html {
 #questionContainer #questionStart img {
     width: 50%;
     height: auto;
+    margin-bottom: 1em;
 }
 
 #questionContainer #questionPY {
