--- a/src/main/webapp/resources/css/question/question_index.css
+++ b/src/main/webapp/resources/css/question/question_index.css
@@ -8,7 +8,7 @@ html {
 
 #progressbarContainer {
     position:fixed;
-    width: 18em;
+    width: 20.5rem;
     height: 100vh;
     z-index: 10;
     top: 0rem;
